Sonar: rimozione codice openspcoop2 morto, clock esplicito, pulizia varia
openspcoop2 vendored (10 segnalazioni, il maggior carico di effort del
progetto): `JSONUtils` e `JsonPathExpressionEngine` non erano referenziati da
nessun punto del progetto ne' da nessuna delle 195 dipendenze sul classpath
(verificato scandendo i .class dei jar). Codice morto: eliminati. Rimossa
anche l'esclusione JaCoCo `org/openspcoop2/**`, ora senza oggetto.

Time zone (java:S8688, 8 siti): il progetto ha gia' un bean `Clock`
(`Clock.systemDefaultZone()`), iniettato dove serve "now". Usato quello invece
di una zona hardcoded: nessun cambio di comportamento e i test possono fissare
il tempo. `EventoSearchService.requireRangeEntroOre` riceve il clock come
parametro perche' e' statico.

`GdeEventFilter` - due difetti oltre alla segnalazione:
- la durata della richiesta era misurata con `OffsetDateTime.now()`, un
  orologio di parete: ora `System.nanoTime()`, che non puo' produrre durate
  negative dopo una correzione NTP;
- `catch (... | Error e)` (java:S1181) ridotto a Exception: il `finally`
  invia l'evento comunque.

Ternari annidati (java:S3358, 8): sei erano lo stesso idioma duplicato nei
controller, `cursorMode ? (cursor != null ? cursor : "") : null`. Estratto in
`ListQueryValidator.cursorValue(..)`, dove vive gia' `isCursorMode`. Gli altri
due estratti in metodi (`paddingBase64`, `esitoDaStatus`).

Altre correzioni: logging condizionato dove gli argomenti erano valutati a
vuoto (S2629, 2); visibilita' ridotta a package-private invece di `protected`
su una classe final con costruttore privato (S2386, 2); regex `\d`/`\w` (S6353,
5, verificate coi test del parser causali); `Math.clamp` (S6885); StringBuilder
`isEmpty()` (S7158); moltiplicazione `24L * 7` (S2184); return singolo (S1126);
`UnaryOperator<String>` (S4276); lambda a espressione (S1602, 2); import,
campi, metodi e parametri non usati (S1128/S1068/S1144/S1172/S1481/S1854, 16).

Due casi dove il rimedio meccanico sarebbe stato